# tokmeter

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pricing.json
assets/: tokmeter.desktop
docs/flow/plans/: feat-2026-07-17-remote-ssh-sources.md
docs/specs/: 2026-07-17-remote-ssh-sources.md  2026-07-18-sources-tab.md
scripts/: install.sh  parity_check.sh
src/: frame.rs  main.rs
src/data/: agg.rs  cache.rs  config.rs  dataset.rs  engine.rs  identity.rs  limits.rs  mod.rs  pricing.rs  private_io.rs  protocol.rs  remote.rs  remote_store.rs  scan.rs  timeutil.rs
