[package]
name = "tokmeter"
version = "0.1.5"
edition = "2021"
rust-version = "1.88"
description = "GPUI prototype of the tok token-spend dashboard"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "fca4d60ce1d4a2c9ac44cdbd4f12426d21881532" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "fca4d60ce1d4a2c9ac44cdbd4f12426d21881532", features = ["wayland", "x11"] }
serde_json = "1"
libc = "0.2"
